--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,12 +6,9 @@
     <title>{{ page.title }} | {{ site.author }}</title>
     <link rel="shortcut icon" href="/favicon.ico">
     <link href="{{ site.url }}/feed/" rel="alternate" title="{{ site.author }}" type="application/atom+xml" />
-
-    <!-- 利用二级域名，避免浏览器并发请求限制-->
-    <link rel="stylesheet" href="http://cssandjs.b0.upaiyun.com/media/css/style.css">
-    <link rel="stylesheet" href="http://cssandjs.b0.upaiyun.com/media/css/highlight.css">
-    <!-- 利用baidu的公共cdn加速-->
-    <script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.0/jquery.min.js"></script>
+    <link rel="stylesheet" href="/media/css/style.css">
+    <link rel="stylesheet" href="/media/css/highlight.css">
+    <script type="text/javascript" src="/media/js/jquery-1.7.1.min.js"></script>
   </head>
   <body>
     <div id="container">
@@ -22,10 +19,12 @@
         <nav>
         <span><a title="home page" class="" href="{{ site.url }}/">home</a></span>
         <span><a title="about" class="" href="{{ site.url }}/about/">about</a></span>
+        <span><a title="publication" class="" href="{{ site.url }}/publication/">publication</a></span>
+        <span><a title="guestbook" class="" href="{{ site.url }}/guestbook/">guestbook</a></span>
+        <span><a title="vitae" class="" href="{{ site.url }}/vitae/">vitae</a></span>
         <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/tags/">tags</a></span>
         <span><a title="links" class="" href="{{ site.url }}/links/">links</a></span>
-        <span><a title="wishlist" class="" href="{{ site.url }}/wishlist/">wishlist</a></span>
         <span><a title="subscribe by RSS" class="" href="{{ site.url }}/feed/">subscribe</a></span>
         </nav>
         <article class="content">
@@ -34,8 +33,14 @@
       </div>
     </div>
     <script type="text/javascript">
-	var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
-	document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F6bef88edd1ea5ecba88e4aeca0e92a70' type='text/javascript'%3E%3C/script%3E"));
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-1988641-2']);
+      _gaq.push(['_trackPageview']);
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
     </script>
   </body>
 </html>
