--- a/media/css/home.css
+++ b/media/css/home.css
@@ -56,7 +56,7 @@ font-family:Galdeano,"Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet M
 font-size:15px;
 line-height:30px;
 color:#555;
-background-color:#fff;
+background-color:#f5f5f5;
 margin:0;
 }
 
@@ -251,7 +251,7 @@ padding:0 3px 2px;
 
 code {
 color:#d14;
-background-color:#f7f7f9;
+background-color:#ffffff;
 border:1px solid #e1e1e8;
 padding:3px 4px;
 }
@@ -260,7 +260,7 @@ pre {
 display:block;
 font-size:12px;
 line-height:20px;
-background-color:#f5f5f5;
+background-color:#ffffff;
 border:1px solid rgba(0,0,0,0.15);
 -webkit-border-radius:4px;
 -moz-border-radius:4px;
