--- a/media/css/home.css
+++ b/media/css/home.css
@@ -186,7 +186,7 @@ cursor:help;
 }
 
 blockquote {
-border-left:5px solid #eee;
+border-left:5px solid #49352f;
 margin:0 0 30px;
 padding:0 0 0 15px;
 }
@@ -213,7 +213,7 @@ float:right;
 padding-left:0;
 padding-right:15px;
 border-left:0;
-border-right:5px solid #eee;
+border-right:5px solid #49352f;
 }
 
 blockquote.pull-right p,blockquote.pull-right small {
