--- a/media/css/home.css
+++ b/media/css/home.css
@@ -250,8 +250,8 @@ padding:0 3px 2px;
 }
 
 code {
-color:#d14;
-background-color:#ffffff;
+background-color:#393939;
+color:#ffffff;
 border:1px solid #e1e1e8;
 padding:3px 4px;
 }
