--- a/media/css/home.css
+++ b/media/css/home.css
@@ -56,7 +56,7 @@ font-family:Galdeano,"Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet M
 font-size:15px;
 line-height:30px;
 color:#555;
-background-color:#f5f5f5;
+background-color:#ededed;
 margin:0;
 }
 
