--- a/media/css/home.css
+++ b/media/css/home.css
@@ -56,7 +56,7 @@ font-family:Galdeano,"Hiragino Sans GB","Microsoft YaHei",Trebuchet,"Trebuchet M
 font-size:15px;
 line-height:30px;
 color:#555;
-background-color:#ededed;
+background-color:#fff;
 margin:0;
 }
 
@@ -186,7 +186,7 @@ cursor:help;
 }
 
 blockquote {
-border-left:5px solid #49352f;
+border-left:5px solid #eee;
 margin:0 0 30px;
 padding:0 0 0 15px;
 }
@@ -213,7 +213,7 @@ float:right;
 padding-left:0;
 padding-right:15px;
 border-left:0;
-border-right:5px solid #49352f;
+border-right:5px solid #eee;
 }
 
 blockquote.pull-right p,blockquote.pull-right small {
@@ -250,8 +250,8 @@ padding:0 3px 2px;
 }
 
 code {
-background-color:#393939;
-color:#ffffff;
+color:#d14;
+background-color:#f7f7f9;
 border:1px solid #e1e1e8;
 padding:3px 4px;
 }
@@ -260,7 +260,7 @@ pre {
 display:block;
 font-size:12px;
 line-height:20px;
-background-color:#ffffff;
+background-color:#f5f5f5;
 border:1px solid rgba(0,0,0,0.15);
 -webkit-border-radius:4px;
 -moz-border-radius:4px;
