--- a/media/css/style.css
+++ b/media/css/style.css
@@ -48,7 +48,7 @@ nav{font-family:"Electrolize",sans-serif;font-size:1.1em;text-transform:uppercas
 nav a:hover{background-color:#ff0000;text-decoration:none;color:#f9f9f9;-webkit-transition:color .2s linear;}*/
 
 nav a{display:block;padding:.7em 1em;color:#000000;}
-nav a:hover{background-color:#e7f433;text-decoration:none;color:#7e2eff;-webkit-transition:color .2s linear;}
+nav a:hover{background-color:#e7f433;text-decoration:none;color:#232528;-webkit-transition:color .2s linear;font-weight:bold;}
 
 .post{padding:.5em 0em;}
 h1{font-family:"Cuprum","Hiragino Sans GB","Microsoft YaHei",sans-serif;font-size:1.6em;color:#000;}
