--- a/media/css/style.css
+++ b/media/css/style.css
@@ -40,8 +40,8 @@ blockquote p{margin:0;padding:.5em 0;}
 .listing-item a{padding:.2em 1em;}
 .listing-item time{color:#999999;}
 .listing-item1{list-style-type:none;}
-.listing-item1 span{padding:.2em 1em;}
-.listing-item1 time{color:#999999;}
+.listing-item1 span{}
+.listing-item1 time{color:#999999; padding:.2em 1em;}
 .listing-seperator{font-weight:bold;}
 .meta{text-align:right;font-size:12px;}
 header{padding:.5em 0;border-bottom: 1px solid #cccccc;}
