--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         <span><a title="about" class="" href="{{ site.url }}/about/">about</a></span>
         <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/tags/">tags</a></span>
-        <span><a title="tweets" class="" href="{{ site.url }}/tweets/">tweets</a></span>
+        <!--<span><a title="tweets" class="" href="{{ site.url }}/tweets/">tweets</a></span>-->
         <span><a title="subscribe by RSS" class="" href="{{ site.url }}/feed/">subscribe</a></span>
         </nav>
         <article class="content">
