--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         </header>
         <nav>
         <span><a title="home page" class="" href="{{ site.url }}/">home</a></span>
+        <!--<span><a title="tweets" class="" href="{{ site.url }}/tweets/">tweets</a></span>-->
         <span><a title="about" class="" href="{{ site.url }}/about/">about</a></span>
         <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/tags/">tags</a></span>
