--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
         <h1>{{ page.title }}</h1>
         </header>
         <nav>
-        <span><a title="home page" class="" href="{{ site.url }}/">home</a></span>
-        <!--<span><a title="tweets" class="" href="{{ site.url }}/tweets/">tweets</a></span>-->
+        <span><a title="home page" class="" href="web.eecs.utk.edu/~ylu20/">home</a></span>
+        <span><a title="Blog" class="" href="{{ site.url }}/">blog</a></span>
         <span><a title="about" class="" href="{{ site.url }}/about/">about</a></span>
         <span><a title="categories" class="" href="{{ site.url }}/categories/">categories</a></span>
         <span><a title="tags" class="" href="{{ site.url }}/tags/">tags</a></span>
