--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 body {
   font-family: 'Lato', Arial, sans-serif;
+  font-weight: 300;
   font-size: 15px;
   padding-top: 5px;
   padding-bottom: 10px; 
